Fixed: using `overflow` to set block context in Sector was messing up with Popover placement.  Switched back to `position:relative`

--- a/src/Components/Menu/styles.module.css
+++ b/src/Components/Menu/styles.module.css
@@ -1,7 +1,3 @@
 :global(.dropdown-item.active::after) {
   content: ' √';
 }
-
-.spacer {
-  height: 48px;
-}
