--- a/src/Components/Sector/styles.module.css
+++ b/src/Components/Sector/styles.module.css
@@ -1,4 +1,4 @@
 .sector {
   width: 100%;
-  overflow-y: scroll;
+  position: relative;
 }
